--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,16 @@
 <resources>
     <string name="app_name">Tiers</string>
     <string name="default_tierlist_name">Untitled</string>
+    <string name="add_image_from_device_cd">Add image from device</string>
+    <string name="create_new_tier_list_cd">Create new tier list</string>
+    <string name="create_tier_list_label">Create tier list</string>
+    <string name="empty_search_results">Hmm, I did not see tiers contains \"%1$s\"</string>
+    <string name="search_tier_list_by_name_cd">Search tier list by name</string>
+    <string name="clear_search_query_button_cd">Clear search query button</string>
+    <string name="delete_confirmation_title">Delete confirmation</string>
+    <string name="tier_list_delete_text">Do you really want to delete %1$s tier list?</string>
+    <string name="delete_btn_label">Delete</string>
+    <string name="cancel_btn_label">Cancel</string>
+    <string name="untitled_tierlist_name">Untitled</string>
+    <string name="get_name_error">Get name error</string>
 </resources>
