Adding new category and fixed number values of colors

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="cancel_btn_label">Cancel</string>
     <string name="untitled_tierlist_name">Untitled</string>
     <string name="get_name_error">Get name error</string>
+    <string name="create_new_category_cd">Create new category</string>
 </resources>
