Edit new category before saving

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="untitled_tierlist_name">Untitled</string>
     <string name="get_name_error">Get name error</string>
     <string name="create_new_category_cd">Create new category</string>
+    <string name="cancel_creating_category_cd">Cancel creating category</string>
 </resources>
