--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -14,4 +14,6 @@
     <string name="cancel_btn_label">Отмена</string>
     <string name="untitled_tierlist_name">Безымянный</string>
     <string name="get_name_error">Ошибка получения названия</string>
+    <string name="create_new_category_cd">Создать новую категорию</string>
+    <string name="cancel_creating_category_cd">Отменить создание категории</string>
 </resources>
