Fixed category editing (elements no deleting after editing). Category info now have height like images grid. Deleting images from device when tier list deletes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="get_name_error">Get name error</string>
     <string name="create_new_category_cd">Create new category</string>
     <string name="cancel_creating_category_cd">Cancel creating category</string>
+    <string name="delete_dragged_image_cd">Delete dragged image</string>
 </resources>
