--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="create_new_category_cd">Create new category</string>
     <string name="cancel_creating_category_cd">Cancel creating category</string>
     <string name="delete_dragged_image_cd">Delete dragged image</string>
+    <string name="empty_lists_label">No tier lists created. It\'s time to creativity!</string>
+    <string name="create_tier_list">Create tier list</string>
 </resources>
