Keys error message

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -34,4 +34,5 @@
     <string name="google_api_instruction_after_link">Коротко, нужно создать проект, получить к нему ключ API, а после создать поисковую систему и получить ключ CX, а после ввести в текстовые поля ниже.\n\nЕсли оставить поля пустыми, то будет использован ключ по умолчанию, но у него есть ограничение в 100 запросов в день, так что он может не работать.</string>
     <string name="search_images_instruction_cd">Инструкция настройки поиска изображений</string>
     <string name="google_api_instruction_link">Инструкция</string>
+    <string name="key_error">API или CX ключи неверны. Будут использованы ключи по умолчанию.</string>
 </resources>
