--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -21,8 +21,8 @@
     <string name="create_tier_list">Добавить новый</string>
     <string name="category_name_label">Название категории</string>
     <string name="search_images_label">Поиск изображений</string>
-    <string name="search_images_via_internet">Поиск фото в Интернете</string>
-    <string name="here_will_be_images_from_google_search">Здесь будут фото из поисковика Google</string>
+    <string name="search_images_via_internet">Поиск изображений в Интернете</string>
+    <string name="here_will_be_images_from_google_search">Здесь будут изображения из Google поиска</string>
     <string name="google_api_key_cd">Google API ключ</string>
     <string name="cx_key_cd">CX ключ</string>
     <string name="vibration">Вибрация</string>
