--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="io_error_sheet_message">Connection error: %1$s</string>
     <string name="no_internet_message">Can\'t search images without Internet connection</string>
     <string name="keys_settings_notification">Now this app uses scraping of google images site and it means that you shouldn\'t set keys</string>
+    <string name="create_new_category">Create new category</string>
 </resources>
